// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the children inside it 1`] = `
<div>
  <div>
    <CustomHead />
    <div
      className="o-header"
    >
      <Logo
        className="o-header__logo"
      />
      <div
        className="c-header__account"
      >
        <div
          className="c-header__account-button"
        >
          <div
            className="c-header__account-label"
          >
            <a>
              Account
            </a>
          </div>
        </div>
      </div>
      <Connect(MiniBag) />
      <span
        className="o-nav"
      >
        <Connect(NavBar) />
      </span>
      <span
        className="c-header__search"
      >
        <SearchBar>
          Content
        </SearchBar>
      </span>
    </div>
  </div>
  <div
    className="o-body"
  >
    Content
  </div>
  <div
    className="o-footer"
  >
    Footer
  </div>
</div>
`;

exports[`renders the footer 1`] = `
<div>
  <div>
    <CustomHead />
    <div
      className="o-header"
    >
      <Logo
        className="o-header__logo"
      />
      <div
        className="c-header__account"
      >
        <div
          className="c-header__account-button"
        >
          <div
            className="c-header__account-label"
          >
            <a>
              Account
            </a>
          </div>
        </div>
      </div>
      <Connect(MiniBag) />
      <span
        className="o-nav"
      >
        <Connect(NavBar) />
      </span>
      <span
        className="c-header__search"
      >
        <SearchBar />
      </span>
    </div>
  </div>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    Footer
  </div>
</div>
`;

exports[`renders the header 1`] = `
<div>
  <div>
    <CustomHead />
    <div
      className="o-header"
    >
      <Logo
        className="o-header__logo"
      />
      <div
        className="c-header__account"
      >
        <div
          className="c-header__account-button"
        >
          <div
            className="c-header__account-label"
          >
            <a>
              Account
            </a>
          </div>
        </div>
      </div>
      <Connect(MiniBag) />
      <span
        className="o-nav"
      >
        <Connect(NavBar) />
      </span>
      <span
        className="c-header__search"
      >
        <SearchBar />
      </span>
    </div>
  </div>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    Footer
  </div>
</div>
`;

exports[`renders the navbar 1`] = `
<div>
  <div>
    <CustomHead />
    <div
      className="o-header"
    >
      <Logo
        className="o-header__logo"
      />
      <div
        className="c-header__account"
      >
        <div
          className="c-header__account-button"
        >
          <div
            className="c-header__account-label"
          >
            <a>
              Account
            </a>
          </div>
        </div>
      </div>
      <Connect(MiniBag) />
      <span
        className="o-nav"
      >
        <Connect(NavBar) />
      </span>
      <span
        className="c-header__search"
      >
        <SearchBar />
      </span>
    </div>
  </div>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    Footer
  </div>
</div>
`;
